# obs-relay

./: CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.html  LICENSE  README.md  config.yaml  config.yaml.example  index.html  obs_relay_gui-old.html  playlist_state.json  pyproject.toml  requirements.txt  run.py  setup.py
docs/: touchosc-layout.md
obs_relay/: __init__.py  main.py
obs_relay/api/: __init__.py  server.py
obs_relay/config/: __init__.py  settings.py
obs_relay/core/: __init__.py  connection_manager.py  obs_client.py
obs_relay/osc/: __init__.py  bridge.py
obs_relay/overlay/: __init__.py  manager.py
obs_relay/playlist/: __init__.py  manager.py
obs_relay/scenes/: __init__.py  presets.py
playlists/: intermission.m3u  main.m3u
scripts/: build.py
tests/: test_core.py
